# ivry_cli

./: .gitignore  README.md  cog.yaml  install.sh  predict.py  predict_comfyui.py  pyproject.toml  setup.py  test.py  tunnel_config.yaml  ui.py  wsl.bat  wsl_install.bat  zip.py
3月5日_5/: app_config.json  cog.yaml  predict.py
api_functions/: cog.yaml  functions.py  main.py
docs/workflow_test/: doc.md  predict_signature.yaml  wsl2.md
docs/workflow_test/python/: predict_signature.py
notebook/: comfyui_colab.ipynb  ivry_colab.ipynb
src/: business_server.py  cli.py  cli_tools.py  cloudflare_api.py  communicate.py  find_comfyui_path.py  heartbeat.py  model_server.py  parse_InOut.py  pull_project.py  styles.css  ui.py  util.py  websocket_comfyui.py
src/cog/: config.py  files.py  json.py  logging.py  schema.py
src/cog/server/: http.py  runner.py  webhook.py
src/templates/: predict_comfyui.py  predict_comfyui_ui.py
ubuntu_test/: tunnel_config.json
ubuntu_test_1/: tunnel_config.json
