[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ivry_cli"
version = "0.1.0"
description = "CLI tool for managing ivry projects and models"
readme = "README.md"
requires-python = ">=3.9"  # This specifies the minimum Python version required
license = {text = "Proprietary"}
authors = [
    {name = "eric", email = "eric.email@example.com"}
]
maintainers = [
    {name = "ivry Team", email = "support@ivry.co"}
]

dependencies = [
  "attrs>=20.1,<24",
  "fastapi>=0.75.2,<0.111.0",
  "pydantic>=1.9,<3",
  "PyYAML",
  "requests>=2,<3",
  "structlog>=20,<25",
  "typing_extensions>=4.4.0",
  "uvicorn[standard]>=0.12,<1",
  "pillow",
  "fire",
  "psutil>=5.8,<6",  # Process and system utilities
  "websocket-client>=1.0,<2",  # WebSocket client for ComfyUI
  "python-dotenv",  # Environment variables
  "gradio",  # Web UI
]

[tool.setuptools]
include-package-data = false
packages = {find = {where = ["src"]}}

[project.scripts]
ivry_cli = "cli_tools:main"
ivry_web = "ui:main"

# Dynamic section: specifies that README content should be loaded from the README.md file
[tool.setuptools.dynamic]
readme = {file = ["README.md"]}